--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     <meta name="author" content="Akshay Kanthed">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
     <meta name="googlebot" content="index, follow">
-    <link rel="canonical" href="https://tweet-bookmark-manager.vercel.app/">
+    <link rel="canonical" href="https://tweetstash.vercel.app/">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://tweet-bookmark-manager.vercel.app/">
+    <meta property="og:url" content="https://tweetstash.vercel.app/">
     <meta property="og:title" content="Tweet Bookmark Manager - Save & Organize Your Twitter Bookmarks">
     <meta property="og:description"
         content="The best free Twitter/X bookmark manager. Save tweets with full content, organize with custom tags, filter by type, and search instantly. No signup required!">
-    <meta property="og:image" content="https://tweet-bookmark-manager.vercel.app/og-image.png">
+    <meta property="og:image" content="https://tweetstash.vercel.app/og-image.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Tweet Bookmark Manager">
@@ -32,11 +32,11 @@
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://tweet-bookmark-manager.vercel.app/">
+    <meta name="twitter:url" content="https://tweetstash.vercel.app/">
     <meta name="twitter:title" content="Tweet Bookmark Manager - Save & Organize Your Twitter Bookmarks">
     <meta name="twitter:description"
         content="The best free Twitter/X bookmark manager. Save tweets with full content, organize with tags, filter by type, and search instantly!">
-    <meta name="twitter:image" content="https://tweet-bookmark-manager.vercel.app/og-image.png">
+    <meta name="twitter:image" content="https://tweetstash.vercel.app/og-image.png">
     <meta name="twitter:creator" content="@akshaykanthed">
 
     <!-- Additional SEO -->
@@ -75,7 +75,7 @@
         "name": "Tweet Bookmark Manager",
         "alternateName": ["Twitter Bookmark Manager", "X Bookmark Manager", "Tweet Saver"],
         "description": "The best free Twitter/X bookmark manager. Save tweets with full content, organize with custom tags, filter by type (threads, images, videos), search instantly, and export your collection.",
-        "url": "https://tweet-bookmark-manager.vercel.app/",
+        "url": "https://tweetstash.vercel.app/",
         "applicationCategory": "ProductivityApplication",
         "operatingSystem": "Any",
         "browserRequirements": "Requires JavaScript. Requires HTML5.",
@@ -95,7 +95,7 @@
             "No signup required",
             "Beautiful dark mode interface"
         ],
-        "screenshot": "https://tweet-bookmark-manager.vercel.app/og-image.png",
+        "screenshot": "https://tweetstash.vercel.app/og-image.png",
         "author": {
             "@type": "Person",
             "name": "Akshay Kanthed"
