--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta name="author" content="Akshay Kanthed">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
     <meta name="googlebot" content="index, follow">
+    <meta name="google-site-verification" content="665d90b0f3325bee" />
     <link rel="canonical" href="https://tweetstash.vercel.app/">
 
     <!-- Open Graph / Facebook -->
